[+] Captura de excepciones globales.
[*] Refactor.